bin/testsuite/tests/compiler/src/errors/compiler5580.swg
#global testerror "Err0550"

var G = @alloc(10)
